[package]
name = "windbgext-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
shell-words = "1.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
verison = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
]
